add STATUS color, tag, and card Soffocation